# mcp-vturb

./: .gitignore  .mcpbignore  CLAUDE.md  README.md  manifest.json  pyproject.toml
scripts/: smoke_test.py
specs/: vturb-openapi.json
src/: server.py
src/vturb_mcp/: __init__.py  client.py  generator.py  server.py
src/vturb_mcp/apps/: __init__.py  dashboard.py
src/vturb_mcp/tools/: __init__.py  clicks.py  comparison_groups.py  conversions.py  custom_metrics.py  events.py  headlines.py  players.py  quota.py  sessions.py  times.py  traffic_origin.py  turbo.py
