[project]
name = "vturb-mcp"
version = "0.1.2"
description = "MCP server for VTurb Public Analytics API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Brenno Pinheiro" }]
dependencies = [
    "fastmcp[code-mode]>=3.1.0",
    "pydantic-monty==0.0.7",
    "httpx>=0.28.0",
    "prefab-ui>=0.10.0",
]

[project.scripts]
vturb-mcp = "vturb_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vturb_mcp"]
